--- a/.github/build-a-release.yml
+++ b/.github/build-a-release.yml
@@ -12,5 +12,5 @@ jobs:
     - uses: 8BitJonny/gh-get-current-pr@2.1.3
       id: PR
       # Psuhing to the PR
-    - run: echo "Your PR number is ${{ steps.PR.outputs.number }} and its JSON is ${{ steps.PR.outputs.pr }}"
+    - run: echo "Your PR number is ${{ steps.PR.outputs.number }} and ${{ steps.PR.outputs.pr_body }}
 
