--- a/.github/build-a-release.yml
+++ b/.github/build-a-release.yml
@@ -13,5 +13,6 @@ jobs:
       id: PR
       # Psuhing to the PR
       # Did it work?
+      # maybe it needed to be in the master
     - run: echo "Your PR number is ${{ steps.PR.outputs.number }} and ${{ steps.PR.outputs.pr_body }}
 
