--- a/.github/build-a-release.yml
+++ b/.github/build-a-release.yml
@@ -14,5 +14,6 @@ jobs:
       # Psuhing to the PR
       # Did it work?
       # maybe it needed to be in the master
+      #pushing to a pull request
     - run: echo "Your PR number is ${{ steps.PR.outputs.number }} and ${{ steps.PR.outputs.pr_body }}
 
