--- a/.github/workflows/build-a-release.yml
+++ b/.github/workflows/build-a-release.yml
@@ -11,6 +11,9 @@ jobs:
  
     - uses: 8BitJonny/gh-get-current-pr@2.1.3
       id: PR
-
-    - run: echo "Your PR number is ${{ steps.PR.outputs.number }} and its JSON is ${{ steps.PR.outputs.pr }}"
+      # Psuhing to the PR
+      # Did it work?
+      # maybe it needed to be in the master
+      #pushing to a pull request
+    - run: echo "Your PR number is ${{ steps.PR.outputs.number }} and ${{ steps.PR.outputs.pr_body }}
 
