--- a/.github/workflows/build-a-release.yml
+++ b/.github/workflows/build-a-release.yml
@@ -13,5 +13,5 @@ jobs:
       id: PR
     - run: |
         echo "---------------------------------"
-        echo cat ${{ steps.PR.outputs.pr_body }}
+        cat ${{ steps.PR.outputs.pr_body }}
 
