--- a/.github/workflows/build-a-release.yml
+++ b/.github/workflows/build-a-release.yml
@@ -12,6 +12,6 @@ jobs:
     - uses: 8BitJonny/gh-get-current-pr@2.1.3
       id: PR
     - run: |
-        export something=`${{ steps.PR.outputs.pr_body }}`
+        export something="${{ steps.PR.outputs.pr_body }}"
         echo $something
 
