--- a/.github/workflows/build-a-release.yml
+++ b/.github/workflows/build-a-release.yml
@@ -5,12 +5,11 @@ jobs:
   BuildRelease:
    runs-on: ubuntu-latest    
    steps:
-    - uses: actions/checkout@v3
-      with:
-        persist-credentials: false
- 
     - uses: 8BitJonny/gh-get-current-pr@2.1.3
       id: PR
     - run: |
         export something="${{ steps.PR.outputs.pr_body }}"
+        echo $something > file
+        cat file
+        
 
