--- a/.github/workflows/build-a-release.yml
+++ b/.github/workflows/build-a-release.yml
@@ -10,7 +10,7 @@ jobs:
     - run: |
         export something="${{ steps.PR.outputs.pr_body }}"
         echo $something > file
-        cat -v file
+        cat -v file | wc -l
         sed -i 's/\r$//' file
-        cat -v file
+        cat -v file | wc -l
 
