--- a/.github/workflows/build-a-release.yml
+++ b/.github/workflows/build-a-release.yml
@@ -10,7 +10,5 @@ jobs:
     - run: |
         export something="${{ steps.PR.outputs.pr_body }}"
         echo $something > file
-        cat -v file 
-        sed -i 's/\r//g' file 
-        cat -v file
+        cat file | wc -l
 
