--- a/.github/workflows/build-a-release.yml
+++ b/.github/workflows/build-a-release.yml
@@ -9,6 +9,5 @@ jobs:
       id: PR
     - run: |
         export something="${{ steps.PR.outputs.pr_body }}"
-        echo $something > file
-        cat file
+        echo $something
 
