--- a/.github/workflows/build-a-release.yml
+++ b/.github/workflows/build-a-release.yml
@@ -8,6 +8,5 @@ jobs:
     - uses: 8BitJonny/gh-get-current-pr@2.1.3
       id: PR
     - run: |
-        export something="${{ steps.PR.outputs.pr_body }}"
-        echo $something
+        echo "${{ steps.PR.outputs.pr_body }}"
 
