--- a/.github/build-a-release.yml
+++ b/.github/build-a-release.yml
@@ -15,7 +15,7 @@ jobs:
       # Did it work?
       # maybe it needed to be in the master
     - run: | 
-        sudo sed -i "s/CHANGELOG/${{ steps.PR.outputs.pr_body }}/g" metadata.json
+        sudo sed -i "s/CHANGELOG/"${{ steps.PR.outputs.pr_body }}"/g" metadata.json
 
     - run: |
         echo cat metadata.json
