--- a/.github/workflows/build-a-release.yml
+++ b/.github/workflows/build-a-release.yml
@@ -8,6 +8,6 @@ jobs:
     - uses: 8BitJonny/gh-get-current-pr@2.1.3
       id: PR
     - run: |
-        sudo sed -i "s/CHANGELOG/${{ steps.PR.outputs.pr_body }}/g" metadata.json
+        sudo sed -i "s/CHANGELOG/"${{ steps.PR.outputs.pr_body }}"/g" metadata.json
         echo "${{ steps.PR.outputs.pr_body }}"
 
