--- a/.github/workflows/build-a-release.yml
+++ b/.github/workflows/build-a-release.yml
@@ -8,6 +8,6 @@ jobs:
     - uses: 8BitJonny/gh-get-current-pr@2.1.3
       id: PR
     - run: |
-        TBD=`echo "${{ steps.PR.outputs.pr_body }}"`
+        TBD="${{ steps.PR.outputs.pr_body }}"
         sudo sed -i "CHANGELOG/$TBD/g" metadata.json
 
