--- a/.github/workflows/build-a-release.yml
+++ b/.github/workflows/build-a-release.yml
@@ -8,7 +8,7 @@ jobs:
     - uses: 8BitJonny/gh-get-current-pr@2.1.3
       id: PR
     - run: |
-        TBD="${{ steps.PR.outputs.pr_body }}"
+        TBD='${{ steps.PR.outputs.pr_body }}'
         echo $TBD
-        sudo sed -i "s|CHANGELOG|$TBD|g" metadata.json
+        sudo sed -i "s/CHANGELOG/$TBD/g" metadata.json
 
