--- a/.github/workflows/build-a-release.yml
+++ b/.github/workflows/build-a-release.yml
@@ -5,6 +5,7 @@ jobs:
   BuildRelease:
    runs-on: ubuntu-latest    
    steps:
+    - uses: actions/checkout@v3
     - uses: 8BitJonny/gh-get-current-pr@2.1.3
       id: PR
     - uses: jacobtomlinson/gha-find-replace@v2
