--- a/.github/workflows/build-a-release.yml
+++ b/.github/workflows/build-a-release.yml
@@ -14,6 +14,5 @@ jobs:
         replace: ${{ steps.PR.outputs.pr_body }}
         include: metadata.json
     - run: |
-        echo "${{ steps.PR.outputs.pr_body }}"
-        cat metadata.json
+        cat metadata.json | wc -l
 
