--- a/.github/workflows/build-a-release.yml
+++ b/.github/workflows/build-a-release.yml
@@ -8,6 +8,10 @@ jobs:
     - uses: actions/checkout@v3
     - uses: 8BitJonny/gh-get-current-pr@2.1.3
       id: PR
+    - run: |
+        multiline=${{ steps.PR.outputs.pr_body }}
+        ${multiline/$'\n'/}
+        echo $multiline
     - uses: jacobtomlinson/gha-find-replace@v2
       with:
         find: "CHANGELOG"
@@ -15,10 +19,5 @@ jobs:
         include: metadata.json
     - run: |
         cat metadata.json | wc -l
-    - uses: jacobtomlinson/gha-find-replace@v2
-      with:
-        find: "\r"
-        replace: ""
-        include: metadata.json
     
 
