--- a/.github/workflows/build-a-release.yml
+++ b/.github/workflows/build-a-release.yml
@@ -18,6 +18,7 @@ jobs:
         include: metadata.json
     - run: |
         sed -zi 's/\r\n/\\n/g' metadata.json
+        cat metadata.json
         cat metadata.json | wc -l
     
 
