--- a/.github/workflows/build-a-release.yml
+++ b/.github/workflows/build-a-release.yml
@@ -17,7 +17,7 @@ jobs:
         replace: ${{ steps.PR.outputs.pr_body }}
         include: metadata.json
     - run: |
-        sed -zi 's/\r\n/\\n/g' metadata.json
+        sed -zi 's/\r/\\n/g' metadata.json
         cat metadata.json
         cat metadata.json | wc -l
     
